--- a/__CORE__/src/renderer/index.html
+++ b/__CORE__/src/renderer/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Prospect</title>
+    <title>Core</title>
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta
       http-equiv="Content-Security-Policy"
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <div id="root"></div>
+    <div id="core"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
